Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: N/A
-
Component/s: Storage Engine - RocksDB
-
Labels:None
Description
They fail like this
rocksdb.type_binary_indexes [ fail ]
|
Test ended at 2016-11-20 22:55:50
|
|
CURRENT_TEST: rocksdb.type_binary_indexes
|
--- /home/psergey/dev-git/10.2-mariarocks/storage/rocksdb/mysql-test/rocksdb/r/type_binary_indexes.result 2016-10-06 17:30:25.595958776 +0000
|
+++ /home/psergey/dev-git/10.2-mariarocks/storage/rocksdb/mysql-test/rocksdb/r/type_binary_indexes.reject 2016-11-20 22:55:49.679353957 +0000
|
@@ -39,7 +39,7 @@
|
SHOW INDEX IN t1;
|
Table Non_unique Key_name Seq_in_index Column_name Collation Cardinality Sub_part Packed Null Index_type Comment Index_comment
|
t1 0 PRIMARY 1 pk A 1000 NULL NULL LSMTREE
|
-t1 1 v16 1 v16 A 500 10 NULL YES LSMTREE
|
+t1 1 v16 1 v16 A 1000 10 NULL YES LSMTREE
|
INSERT INTO t1 (b,b20,v16,v128,pk) VALUES ('a','char1','varchar1a','varchar1b',1),('a','char2','varchar2a','varchar2b',2),('b','char3','varchar1a','varchar1b',3),('c','char4','varchar3a','varchar3b',4),('d','char5','varchar4a','varchar3b',5),('e','char6','varchar2a','varchar3b',6);
|
INSERT INTO t1 (b,b20,v16,v128,pk) SELECT b,b20,v16,v128,pk+100 FROM t1;
|
EXPLAIN SELECT HEX(SUBSTRING(v16,0,3)) FROM t1 WHERE v16 LIKE 'varchar%';
|
...
rocksdb.type_blob_indexes w2 [ fail ]
|
Test ended at 2016-11-18 22:41:49
|
|
CURRENT_TEST: rocksdb.type_blob_indexes
|
--- /home/psergey/dev-git/10.2-mariarocks/storage/rocksdb/mysql-test/rocksdb/r/type_blob_indexes.result 2016-10-06 17:30:25.595958776 +0000
|
+++ /home/psergey/dev-git/10.2-mariarocks/storage/rocksdb/mysql-test/rocksdb/r/type_blob_indexes.reject 2016-11-18 22:41:49.527347338 +0000
|
@@ -105,7 +105,7 @@
|
SHOW INDEX IN t1;
|
Table Non_unique Key_name Seq_in_index Column_name Collation Cardinality Sub_part Packed Null Index_type Comment Index_comment
|
t1 0 PRIMARY 1 pk A 1000 NULL NULL LSMTREE
|
-t1 1 m 1 m A 500 128 NULL YES LSMTREE
|
+t1 1 m 1 m A 1000 128 NULL YES LSMTREE
|
INSERT INTO t1 (b,t,m,l) VALUES
|
('','','',''),
|
('a','b','c','d'),
|
The difference in results doesn't look like a failure, but we need to investigate why it happens.
Attachments
Issue Links
- is part of
-
MDEV-9658 Make MyRocks in MariaDB stable
-
- Closed
-
- relates to
-
MDEV-11477 MariaRocks: rocksdb.type_varchar failure
-
- Closed
-