MDEV-11321: MariaRocks: type_binary_indexes, type_blob_indexes fail

... due to different index statistics
Make statistics calculations in MariaRocks produce the same values
that MyRocks produces.

Added a comment in rdb_datadic.cc